Added some brief bullet poitns on each section

--- a/reports/Final_Report/Dissertation.tex
+++ b/reports/Final_Report/Dissertation.tex
@@ -1,5 +1,6 @@
 \documentclass[pdftex,10pt,a4paper,oneside]{report}
 
+\usepackage{hyperref}
 \usepackage{amsmath}
 \usepackage{algorithm}
 \usepackage{algorithmic}
