--- a/reports/Final_Report/Preamble/Abstract.tex
+++ b/reports/Final_Report/Preamble/Abstract.tex
@@ -1,3 +1,14 @@
 
 \chapter*{Abstract}
 \addcontentsline{toc}{chapter}{Abstract}
+
+Usually 100-300 words stating the salient points of the report. It should help your reader
+to decide whether the report is relevant to her or his interests.
+
+
+I will mention:
+\begin{itemize}
+\item How I got the s-expressions and how they were parsed
+\item The uses of the graph and the queries you can make 
+\item How much it can speed up compilation and how
+\end{itemize}
