--- a/reports/Final_Report/Preamble/Frontpage.tex
+++ b/reports/Final_Report/Preamble/Frontpage.tex
@@ -8,20 +8,21 @@
 	\end{center}
 	\vspace{10mm}
 	\begin{center}
-		\textbf{\Large The Project Title}
+		\textbf{\Large Create and Explore a graph from Agda Definitions to
+		analyse projects and speed up compilation}
 		\vspace{10mm}
 	\end{center}
 	\begin{center}
-		\textbf{\large The Document Title}
+		\textbf{\large Dissertation}
 		\vspace{20mm}
-		\\\textbf{\Large Matthew Leeke}
+		\\\textbf{\Large Julian Camilo Vidal Polania}
 		\vspace{30mm}
 	\end{center}
 	\begin{center}
 		{\large School of Computer Science}
 		\\ {\large College of Engineering and Physical Sciences}
 		\\ {\large University of Birmingham}
-		\\ {\large 2023-24}
+		\\ {\large 2024-25}
 	\end{center}
 \end{spacing}
 
