--- a/reports/Final_Report/Dissertation.tex
+++ b/reports/Final_Report/Dissertation.tex
@@ -1,5 +1,9 @@
 \documentclass[pdftex,10pt,a4paper,oneside]{report}
 
+%% Added by me
+\usepackage{tabularray}
+\usepackage{tabularx}
+
 \usepackage{hyperref}
 \usepackage{amsmath}
 \usepackage{algorithm}
