Added cli stuff and continued writting report

--- a/reports/Final_Report/Dissertation.tex
+++ b/reports/Final_Report/Dissertation.tex
@@ -19,6 +19,8 @@
 \pagestyle{fancy}
 \renewcommand{\headrulewidth}{0.2pt}
 
+\graphicspath{ {./assets/} }
+
 % Styles can be Sonny, Lenny, Glenn, Conny, Rejne, Bjarne and Bjornstrup
 \usepackage[Sonny]{fncychap} 
 
