Added project management section

--- a/reports/Final_Report/Dissertation.tex
+++ b/reports/Final_Report/Dissertation.tex
@@ -4,6 +4,11 @@
 \usepackage{tabularray}
 \usepackage{tabularx}
 \usepackage{listings}
+\usepackage{pgfgantt}
+
+\usepackage[utf8]{inputenc} % allow utf-8 input
+\usepackage{amsfonts}       % blackboard math symbols
+\usepackage{tikz-network}
 
 \usepackage{hyperref}
 \usepackage{amsmath}
