--- a/reports/Final_Report/bibliography.bib
+++ b/reports/Final_Report/bibliography.bib
@@ -647,7 +647,17 @@
 }
 
 @misc{sexp,
-    title = "what is s-expression?",
-    url = {https://www.computerhope.com/jargon/s/s-expression.htm},
-    journal = {www.computerhope.com},
+    title = "s-expression",
+    howpublished = {\url{ https://www.computerhope.com/jargon/s/s-expression.htm
+                    }},
+    Author = {ComputerHope.com},
+}
+
+ @misc{mathstodon,
+    title = {Mathstodon Thread},
+    url = {https://mathstodon.xyz/@MartinEscardo/113358614704093016},
+    journal = {Mathstodon},
+    author = {Escardo, Martin},
+    year = {2025},
+    month = {Oct},
 }
