Completed some chapters

--- a/reports/Final_Report/Dissertation.tex
+++ b/reports/Final_Report/Dissertation.tex
@@ -5,6 +5,7 @@
 \usepackage{tabularx}
 \usepackage{listings}
 \usepackage{pgfgantt}
+\usepackage{subcaption}
 
 \usepackage[utf8]{inputenc} % allow utf-8 input
 \usepackage{amsfonts}       % blackboard math symbols
