--- a/reports/Final_Report/bibliography.bib
+++ b/reports/Final_Report/bibliography.bib
@@ -661,3 +661,27 @@
     year = {2025},
     month = {Oct},
 }
+
+@misc{type-topology,
+    title = {{TypeTopology}},
+    author = {Escard\'{o}, Mart\'{i}n H. and {contributors}},
+    url = {https://github.com/martinescardo/TypeTopology},
+    note = {{Agda} development},
+}
+
+@software{agda-unimath,
+    author = {Rijke, Egbert and Stenholm, Elisabeth and Prieto-Cubides, Jonathan
+              and Bakke, Fredrik and {others}},
+    license = {MIT},
+    title = {{The agda-unimath library}},
+    url = {https://github.com/UniMath/agda-unimath/},
+}
+
+@software{stdlib,
+    author = {{The Agda Community}},
+    month = sep,
+    title = {{Agda Standard Library}},
+    url = {https://github.com/agda/agda-stdlib},
+    version = {2.1.1},
+    year = {2024},
+}
