changing some spelling mistakes

--- a/reports/Final_Report/bibliography.bib
+++ b/reports/Final_Report/bibliography.bib
@@ -685,3 +685,11 @@
     version = {2.1.1},
     year = {2024},
 }
+
+@software{agda_html,
+    author = {{Julian Vidal}},
+    month = sep,
+    title = {{AGDA_HTML}},
+    url = {https://github.com/JulianVidal/AGDA_HTML},
+    year = {2025},
+}
